refactor: improve AddBookServlet with input validation and code cleanup